# aoc

./: .gitignore  Cargo.toml  README.md  template
macros/: Cargo.toml
macros/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
script/: run  scaffold
src/: main.rs
utils/: Cargo.toml
utils/src/: annimations.rs  file_reader.rs  harness.rs  lib.rs
y2015/: Cargo.toml  lib.rs
y2015/solutions/: d01.rs  d02.rs  d03.rs  d05.rs  d06.rs  d10.rs  d14.rs  d15.rs  d16.rs  d17.rs  d20.rs  d22.rs
y2015/src/: d04.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d16.rs  d18.rs  d19.rs  d21.rs  d23.rs  d24.rs  d25.rs  lib.rs
y2016/: Cargo.toml  lib.rs
y2016/solutions/: d01.rs  d02.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs
y2016/src/: d03.rs  lib.rs
y2017/: Cargo.toml  lib.rs
y2017/solutions/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs
y2018/: Cargo.toml  lib.rs
y2018/solutions/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs
y2025/: Cargo.toml  lib.rs
y2025/solutions/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs
