[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Ian Carey"]
description = "Advent of Code"

[profile.release]
opt-level = 3

[dependencies]
y2015 = {path = "./y2015"}
y2016 = {path = "./y2016"}
y2017 = {path = "./y2017"}
y2018 = {path = "./y2018"}
y2025 = {path = "./y2025"}
utils = {path = "./utils"}
inventory = "0.3"