[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Ian Carey"]
description = "Utils for Advent of Code"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }