[package]
name = "y2015"
version = "0.1.0"
edition = "2021"
authors = ["Ian Carey"]
description = "Advent of Code 2015"

[lib]
name = "y2015"
path = "lib.rs"

[dependencies]
utils = { path = "../utils" }
macros = { path = "../macros" }
proc_macros = { path = "../proc_macros" }
automod = "1.0"
md5 = "0.7.0"
fancy-regex = "0.14.0"
unescaper = "0.1.5"
itertools = "0.8.2"
serde_json = "1.0.137"
cached = "0.55.1"
inventory = "0.3"