[package]
name = "y2016"
version = "0.1.0"
edition = "2021"
authors = ["Ian Carey"]
description = "Advent of Code 2016"

[lib]
name = "y2016"
path = "lib.rs"

[dependencies]
utils = { path = "../utils" }
macros = { path = "../macros" }
proc_macros = { path = "../proc_macros" }
automod = "1.0"
md5 = "0.7.0"
fancy-regex = "0.14.0"